--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,21 @@
-<h1>HOME PAGE</h1>
+<div class="mt-4">
+    <div class="row">
+            {{#each webdata }}
+        <div class="col-sm-6 col-lg-4">
+            <div class="card card-webdata" style="width: 18rem;">
+                <a href="/webdemo/{{this.slug}}">
+                 <img class="card-img-top" src="{{this.image}}" alt="{{this.image}}">
+                
+                 </a>
+            <div class="card-body">
+                <a href="/webdemo/{{this.slug}}">
+                <h5 class="card-title">{{this.name}}</h5>
+                </a>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">{{this.detail}}</a>
+            </div>
+            </div>
+        </div>
+            {{/each}}
+    </div>
+</div>
